@@ -2,6 +2,10 @@ What's New in Python 2.2.4?
 Release date: XX-XXX-XXXX
 ===========================
 
+- Applied a security fix to SimpleXMLRPCserver (PSF-2005-001).  This
+  disables recursive traversal through instance attributes, which can
+  be exploited in various ways.
+
 - Fixed a bug in the cache of length-one Unicode strings that could
   lead to a seg fault.  The specific problem occurred when an earlier,
   non-fatal error left an uninitialized Unicode object in the
